# orqa

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
.orqa/: AGENTS.md  CHARTER.md  pod.toml  pod.txt
docs/: bugs.md  feedback-01.md  high-severity-factory-ledger.md  phase-01-existence-helpers-delivery.md  phase-02-daemon-prompt-args-delivery.md  phase-03-finlock-run-state-tolerance-delivery.md  phase-04-existence-audit-integration-test-delivery.md  pod-root-factory-ledger.md  pod-root-phase-01-data-model-registry-delivery.md  pod-root-phase-02-detection-context-delivery.md  pod-root-phase-03-creation-registration-delivery.md  pod-root-phase-04-runtime-launch-delivery.md  pod-root-phase-05-observability-audit-delivery.md  pod-root-phase-06-docs-tests-migration-delivery.md  pod-root-redesign.md  premortem.md  tui-factory-ledger.md  tui-operator-cockpit.md  tui-phase-01-foundations-delivery.md  tui-phase-01-pokerface.md  tui-phase-02-event-model-watching-delivery.md  tui-phase-03-timeline-ui-filters-delivery.md  tui-phase-04-composer-send-wake-delivery.md
src/: cli.rs  commands.rs  config.rs  config_test.rs  doctor.rs  global_loop.rs  help.md  hooks.rs  issues.rs  loop_worker.rs  loop_worker_test.rs  main.rs  main_test.rs  model.rs  report.rs  runs.rs  runtime.rs  runtime_home.rs  runtime_test.rs  service.rs  service_test.rs  status.rs
src/cli/: fin.rs  loop_command.rs  mail.rs  (+4 more)
templates/: fin-agents.md  pod-agents.md
tests/: help_command.rs  hygiene.rs  pod_flow.rs
web/: app.js  index.html  styles.css  wrangler.jsonc
(+49 files in other folders)
